--- a/src/styles/components/_global.scss
+++ b/src/styles/components/_global.scss
@@ -11,6 +11,8 @@ body {
   // display: flex;
   // min-height: 100vh;
   // flex-direction: column;
+  background-color: $body-bg-color;
+  color: $body-color;
 }
 
 main {
