--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,14 +7,58 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ site.description or description or metadata.description }}">
-  <title>{{ site.title or title or metadata.title }}</title>
+  <title>{{ title or data.title or site.title }}</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
   <link rel="stylesheet" href="/styles/index.css">
   <link rel="stylesheet" href="/styles/materialize.css" type="text/css" />
 </head>
 <body id="top" itemscope itemtype="http://schema.org/WebPage">
+
+<div class="navbar-fixed">
+    <nav role="navigation">
+      <div class="nav-wrapper">
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <div class="container">
+        <a id="logo-container" href="/" class="brand-logo valign-wrapper"><img src="/images/logo-placeholder.png" alt="Logo"></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="/#blog">Blog</a></li>
+          <li><a href="/#about">About Me</a></li>
+          <li><a href="/#contact">Contact</a></li>
+        </ul>
+        </div>
+        </div>
+    </nav>
+  </div>
+
+    <ul id="nav-mobile" class="sidenav">
+      <li><a class="sidenav-close" href="/#blog">Blog</a></li>
+      <li><a class="sidenav-close" href="/#about">About Me</a></li>
+      <li><a class="sidenav-close" href="/#contact">Contact</a></li>
+    </ul>
+
   {{ content | safe }}
+  <footer class="page-footer teal">
+    <div class="container">
+      <div class="row">
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      © 2014 Copyright Text
+      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      </div>
+    </div>
+  </footer>
+
   <script src="/scripts/index.js"></script>
-  <script src="/scripts/materialize.js"></script>
 </body>
 </html>
