--- a/src/archive/blog.njk
+++ b/src/archive/blog.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
-title: Uche Mennel
-permalink: /
+title: Uche Mennel - Blog Archive
+permalink: /archive/blog/
 ---
 <div id="index-banner" class="parallax-container">
   <div class="section no-pad-bot">
@@ -22,39 +22,20 @@ permalink: /
       </div>
     </div>
   </div>
-  <div class="parallax"><img src="images/background1.jpg" alt="Unsplashed background img 1"></div>
+  <div class="parallax"><img src="/images/background1.jpg" alt="Unsplashed background img 1"></div>
 </div>
 
 <div class="section scrollfix" id="blog">
   <div class="container">
     <div class="row">
       <div class="col s12 m12 l8 offset-l2">
-        {% set posts = collections.posts | head(-2) %}
+
+        {% set posts = collections.posts %}
         {% include "posts.njk" %}
-      </div>
-    </div>
 
-    {% if collections.posts.length > 0 %}
-    <div class="row center-align">
-      <a href="{{ '/archive/blog/' | url }}" class="btn-large waves-effect waves-light grey darken-2">
-        <i class="material-icons right">chevron_right</i>
-        Older posts
-      </a>
-    </div>
-    {% endif %}
-  </div>
-</div>
-
-<div class="parallax-container" id="about">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <div class="row center">
-        <h4>About Me</h4>
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
       </div>
     </div>
   </div>
-  <div class="parallax"><img src="images/background1.jpg" alt="Unsplashed background img 2"></div>
 </div>
 
 <div class="section">
