--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,50 @@
-$var: white;
+html {
+	scroll-behavior: smooth;
+  scroll-padding-top: 64px;
+}
 
-body {
-  background-color: $var;
+.parallax-container {
+  min-height: 380px;
+  line-height: 0;
+  height: auto;
+  color: rgba(255,255,255,0.9);
+
+  &.section {
+    width: 100%;
+
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: inline-flex
+  }
+
+  li {
+    padding: 0 20px;
+  }
+}
+
+/* Rules for sizing the icon. */
+.material-icons {
+  vertical-align:text-bottom;
+
+  &.md-18 { font-size: 18px; }
+  &.md-24 { font-size: 24px; }
+  &.md-36 { font-size: 36px; }
+  &.md-48 { font-size: 48px; }
+  &.md-96 { font-size: 96px; }
+
+  /* Rules for using icons as black on a light background. */
+  &.md-dark {
+    color: rgba(0, 0, 0, 0.54);
+    &.md-inactive { color: rgba(0, 0, 0, 0.26); }
+  }
+
+  /* Rules for using icons as white on a dark background. */
+  &.md-light {
+    color: rgba(255, 255, 255, 1);
+    &.md-inactive { color: rgba(255, 255, 255, 0.3); }
+  }
 }
