Adjust font sizes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,33 @@ html {
   scroll-padding-top: 64px;
 }
 
+#logo-container {
+  img {
+    height: 1.96em;
+  }
+}
+
+#index-banner {
+  h1 {
+    font-size: 4.2rem;
+  }
+  h2 {
+    font-size: 3.56rem;
+  }
+  h3 {
+    font-size: 2.92rem;
+  }
+  h4 {
+    font-size: 2.28rem;
+  }
+  h4 {
+    font-size: 1.64rem;
+  }
+  h4 {
+    font-size: 1.15rem;
+  }
+}
+
 .parallax-container {
   min-height: 380px;
   line-height: 0;
