--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
   <link rel="stylesheet" href="/styles/index.css">
   <link rel="stylesheet" href="/styles/materialize.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/prism-material-dark.css" type="text/css" />
+  <script src="https://kit.fontawesome.com/daa910c1c9.js" crossorigin="anonymous"></script>
 </head>
 <body id="top" itemscope itemtype="http://schema.org/WebPage">
 
@@ -19,11 +21,10 @@
       <div class="nav-wrapper">
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <div class="container">
-        <a id="logo-container" href="/" class="brand-logo valign-wrapper"><img src="/images/logo-placeholder.png" alt="Logo"></a>
+        <a id="logo-container" href="/" class="brand-logo valign-wrapper"><img src="/images/logo.png" alt="Logo"></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="/#blog">Blog</a></li>
           <li><a href="/#about">About Me</a></li>
-          <li><a href="/#contact">Contact</a></li>
         </ul>
         </div>
         </div>
@@ -37,23 +38,22 @@
     </ul>
 
   {{ content | safe }}
-  <footer class="page-footer teal">
+  <footer class="page-footer blue darken-4">
     <div class="container">
       <div class="row">
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          <span class="white-text">Follow Me</span>
+          <ul class="share-buttons">
+            <li><a href="https://www.github.com/umennel" target="_blank" title="GitHub"><i class="fab fa-light fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/uchemennel/" target="_blank" title="LinkedIn" ><i class="fab fa-light fa-linkedin"></i></a></li>
+            <li><a href="https://twitter.com/umennel" target="_blank" title="Twitter"><i class="fab fa-light fa-twitter"></i></a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2014 Copyright Text
+      © 2021 Copyright Uche Mennel
       <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
     </div>
