--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -5,7 +5,7 @@ layout: layouts/base.njk
   <div class="container">
     <div class="row center">
       <div class="col s12">
-        <p class="left-align light">{{ content | safe }}</p>
+        <div class="left-align light">{{ content | safe }}</div>
       </div>
     </div>
   </div>
