--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -5,7 +5,10 @@ layout: layouts/base.njk
   <div class="container">
     <div class="row center">
       <div class="col s12">
-        <div class="left-align light">{{ content | safe }}</div>
+        <div class="left-align light">
+          <h1>{{ title }}</h1>
+          {{ content | safe }}
+        </div>
       </div>
     </div>
   </div>
