--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -24,6 +24,9 @@
         <ul class="right hide-on-med-and-down">
           <li><a href="/#blog">Blog</a></li>
           <li><a href="/#about">About Me</a></li>
+          <li><a href="https://www.github.com/umennel" target="_blank" title="GitHub"><i class="fab fa-light fa-github"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/uchemennel/" target="_blank" title="LinkedIn" ><i class="fab fa-light fa-linkedin"></i></a></li>
+          <li><a href="https://twitter.com/umennel" target="_blank" title="Twitter"><i class="fab fa-light fa-twitter"></i></a></li>
         </ul>
         </div>
         </div>
@@ -36,23 +39,22 @@
     </ul>
 
   {{ content | safe }}
-  <footer class="page-footer blue darken-4">
+  <footer class="page-footer teal">
     <div class="container">
       <div class="row">
         <div class="col l4 offset-l2 s12">
-          <span class="white-text">Follow Me</span>
-          <ul>
-            <li><a href="https://www.github.com/umennel" target="_blank" title="GitHub"><i class="fab fa-light fa-github"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/uchemennel/" target="_blank" title="LinkedIn" ><i class="fab fa-light fa-linkedin"></i></a></li>
-            <li><a href="https://twitter.com/umennel" target="_blank" title="Twitter"><i class="fab fa-light fa-twitter"></i></a></li>
-          </ul>
+          Here comes more text ...
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2021 Copyright Uche Mennel
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      © 2021 Uche Mennel
+        <ul class="socials right">
+          {% for social in site.socials %}
+          <li><a href="{{ social.url }}" target="_blank" title="{{ social.name }}"><i class="fab fa-light fa-{{ social.name }}"></i></a></li>
+          {% endfor %}
+        </ul>
       </div>
     </div>
   </footer>
