--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,9 +37,9 @@ img {
 }
 
 ul.socials {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
   display: inline-flex;
 
   li {
@@ -87,13 +87,25 @@ ul.tags {
 }
 
 .parallax-container {
-  min-height: 380px;
   line-height: 0;
   height: auto;
   color: rgba(255,255,255,0.9);
 
+  @media only screen and (min-width: 0) {
+    min-height: 240px;
+  }
+
+  @media only screen and (min-width: $large-screen) {
+    min-height: 480px;
+  }
+
   &.section {
     width: 100%;
+  }
+
+  img {
+    width: auto;
+    opacity: 0.5 !important;
   }
 }
 
