Change logo placeholder

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -20,7 +20,7 @@
       <div class="nav-wrapper">
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <div class="container">
-        <a id="logo-container" href="/" class="brand-logo valign-wrapper"><img src="/images/logo.png" alt="Logo"></a>
+        <a id="logo-container" href="/" class="brand-logo valign-wrapper"><img src="/images/logo_small.png" alt="Logo"></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="/#blog">Blog</a></li>
           <li><a href="/#about">About Me</a></li>
