Change navbar background on scroll

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -15,8 +15,8 @@
 </head>
 <body id="top" itemscope itemtype="http://schema.org/WebPage">
 
-<div class="navbar-fixed">
-    <nav role="navigation">
+  <div class="navbar-fixed">
+    <nav id="navbar" role="navigation">
       <div class="nav-wrapper">
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <div class="container">
@@ -33,15 +33,16 @@
     </nav>
   </div>
 
-    <ul id="nav-mobile" class="sidenav">
-      <li><a class="sidenav-close" href="/#blog">Blog</a></li>
-      <li><a class="sidenav-close" href="/#about">About Me</a></li>
-      {% for social in site.socials %}
-          <li><a class="sidenav-close" href="{{ social.url }}" target="_blank" title="{{ social.name }}"><i class="fab fa-dark fa-{{ social.name }}"></i></a></li>
-      {% endfor %}
-    </ul>
+  <ul id="nav-mobile" class="sidenav">
+    <li><a class="sidenav-close" href="/#blog">Blog</a></li>
+    <li><a class="sidenav-close" href="/#about">About Me</a></li>
+    {% for social in site.socials %}
+        <li><a class="sidenav-close" href="{{ social.url }}" target="_blank" title="{{ social.name }}"><i class="fab fa-dark fa-{{ social.name }}"></i></a></li>
+    {% endfor %}
+  </ul>
 
   {{ content | safe }}
+
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
