--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,16 @@ img {
   }
 }
 
+.navbar-fixed {
+  position: absolute;
+}
+
+#navbar {
+  background-color: color('grey', 'darken-4');
+  box-shadow: none;
+  transition: 1s;
+}
+
 #index-banner {
   h1 {
     font-size: 4.2rem;
@@ -33,6 +43,11 @@ img {
   }
   h4 {
     font-size: 1.15rem;
+  }
+
+  .section {
+    padding-top: calc(1rem + 100px);
+    width: 100%;
   }
 }
 
@@ -90,18 +105,6 @@ ul.tags {
   line-height: 0;
   height: auto;
   color: rgba(255,255,255,0.9);
-
-  @media only screen and (min-width: 0) {
-    min-height: 240px;
-  }
-
-  @media only screen and (min-width: $large-screen) {
-    min-height: 480px;
-  }
-
-  &.section {
-    width: 100%;
-  }
 
   img {
     width: auto;
